// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grocery renders quantity input disabled when clearQuantity is true 1`] = `
<div>
  <div>
    <label
      class="form-label"
      for="quantity"
    >
      Quantity
    </label>
    <input
      class="form-control"
      disabled=""
      id="quantity"
      name="quantity"
      placeholder="3 bags"
      type="text"
      value="foo"
    />
    <div
      class="ms-1 mt-1"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearQuantity"
          name="clearQuantity"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearQuantity"
          title=""
        >
          Clear quantity
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grocery renders quantity input enabled when clearQuantity is false 1`] = `
<div>
  <div>
    <label
      class="form-label"
      for="quantity"
    >
      Quantity
    </label>
    <input
      class="form-control"
      id="quantity"
      name="quantity"
      placeholder="3 bags"
      type="text"
      value="foo"
    />
    <div
      class="ms-1 mt-1"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearQuantity"
          name="clearQuantity"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearQuantity"
          title=""
        >
          Clear quantity
        </label>
      </div>
    </div>
  </div>
</div>
`;
